force-app/main/default/objects/Project__c/fields/Accounting_Resource__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>