force-app/main/default/objects/Project__c/fields/Added_to_Xledger__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Xledger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when Project is added to Xledger</description>
    <inlineHelpText>Check when Project is added to Xledger</inlineHelpText>
    <label>Added to Xledger</label>
    <type>Checkbox</type>
</CustomField>