force-app/main/default/objects/Project__c/fields/Budgeting_Completed__c.field-meta.xml
<CustomField>
    <fullName>Budgeting_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budgeting Completed</label>
    <type>Checkbox</type>
</CustomField>