force-app/main/default/objects/Project__c/fields/Customer_category__c.field-meta.xml
<CustomField>
    <fullName>Customer_category__c</fullName>
    <label>Customer category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>