force-app/main/default/objects/Project__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>