force-app/main/default/objects/Project__c/fields/ERP_Resource__c.field-meta.xml
<CustomField>
    <fullName>ERP_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>