force-app/main/default/objects/Project__c/fields/General_info__c.field-meta.xml
<CustomField>
    <fullName>General_info__c</fullName>
    <label>General info</label>
    <type>TextArea</type>
</CustomField>