force-app/main/default/objects/Project__c/fields/Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Go_Live__c</fullName>
    <label>Go Live</label>
    <type>Date</type>
</CustomField>