force-app/main/default/objects/Project__c/fields/Integration_Resource__c.field-meta.xml
<CustomField>
    <fullName>Integration_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>