force-app/main/default/objects/Project__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrations</label>
    <type>Checkbox</type>
</CustomField>