force-app/main/default/objects/Project__c/fields/Invoice_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>