force-app/main/default/objects/Project__c/fields/Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field use to distinguish whether a project record will trigger automation or not. Projects that are cloned will not trigger Process/Flow.</description>
    <label>Is Cloned</label>
    <type>Checkbox</type>
</CustomField>