force-app/main/default/objects/Project__c/fields/Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Kickoff__c</fullName>
    <description>When does this project start?</description>
    <label>Kickoff</label>
    <type>Date</type>
</CustomField>