force-app/main/default/objects/Project__c/fields/Kontrakt__c.field-meta.xml
<CustomField>
    <fullName>Kontrakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontrakt</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>