force-app/main/default/objects/Project__c/fields/Payroll_Resource__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>