force-app/main/default/objects/Project__c/fields/PM_Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>PM_Hours_Estimate__c</fullName>
    <label>PM Hours Estimate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>