force-app/main/default/objects/Project__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <formula>If(RecordType.Name=&quot;Implementations&quot;, TRIM(&quot;IMP - &quot;&amp;MID((Name),18,99)),
If(RecordType.Name=&quot;Integrations&quot;, TRIM(&quot;INT - &quot;&amp;MID((Name),15,99)),
If(RecordType.Name=&quot;Operational&quot;, TRIM(&quot;O - &quot;&amp;MID((Name),12,99)),
If(RecordType.Name=&quot;Internal Project&quot;,

Case(Project_Number__c,

9111, &quot;Administration&quot;,
10003, &quot;Free capasity&quot;,
10015, &quot;Automation&quot;,
10016, &quot;Best practice&quot;,
10017, &quot;Product development&quot;,
10018, &quot;Training&quot;,
10019, &quot;Fusion&quot;,
10020, &quot;Absence&quot;,
10025, &quot;Sales&quot;,
10026, &quot;Billing&quot;,
10027, &quot;Not defined projects&quot;,
10028, &quot;Internal support/IT&quot;,
10029, &quot;Administration&quot;,
10030, &quot;Administration&quot;,
10031, &quot;Management&quot;,
10032, &quot;HR development&quot;,
10034, &quot;Administration&quot;,
10035, &quot;Automation&quot;,
10036, &quot;Billing&quot;,
10037, &quot;Administration&quot;,
10038, &quot;Absence&quot;,
10039, &quot;Training&quot;,
10040, &quot;Management&quot;,
10041, &quot;HR development&quot;,
10042, &quot;Internal support/IT&quot;,
10043, &quot;Free capasity&quot;,
10044, &quot;Product development&quot;,
10045, &quot;Best practice&quot;,
10046, &quot;Sales&quot;,
10047, &quot;Not defined projects&quot;,
10048, &quot;Administration&quot;,
10049, &quot;Billing&quot;,
10050, &quot;Administration&quot;,
10051, &quot;Absence&quot;,
10052, &quot;Training&quot;,
10053, &quot;Management&quot;,
10054, &quot;Internal support/IT&quot;,
10055, &quot;Free capasity&quot;,
10056, &quot;Sales&quot;,
10057, &quot;Not defined projects&quot;,
10058, &quot;Administration&quot;,
10059, &quot;Automation&quot;,
10060, &quot;Administration&quot;,
10061, &quot;Absence&quot;,
10062, &quot;Fusion&quot;,
10063, &quot;Training&quot;,
10064, &quot;Management&quot;,
10065, &quot;HR development&quot;,
10066, &quot;Internal support/IT&quot;,
10067, &quot;Free capasity&quot;,
10068, &quot;Product development&quot;,
10069, &quot;Best practice&quot;,
10070, &quot;Sales&quot;,
10071, &quot;Not defined projects&quot;,
10072, &quot;Billing&quot;,
10073, &quot;Administration&quot;,
10108, &quot;Business development&quot;,
10109, &quot;Fusion&quot;,
10224, &quot;Automation&quot;,
10229, &quot;Fusion&quot;,
10293, &quot;Closed&quot;,
10331, &quot;Internal support/IT&quot;,
10332, &quot;Business development&quot;,
11973, &quot;Business development&quot;,
12240, &quot;Fusion&quot;,
12262, &quot;Fusion&quot;,
12326, &quot;Business development&quot;,
12571, &quot;Fusion&quot;,
12572, &quot;Fusion&quot;,
12575, &quot;Training&quot;,
12576, &quot;Absence&quot;,
12577, &quot;Sales&quot;,
12578, &quot;Billing&quot;,
12579, &quot;Management&quot;,
12579, &quot;Not defined projects&quot;,
12580, &quot;Internal support/IT&quot;,
12581, &quot;Administration&quot;,
12582, &quot;Administration&quot;,
12583, &quot;Management&quot;,
12585, &quot;Free capasity&quot;,
12697, &quot;Business development&quot;,
12737, &quot;Automation&quot;,
13371, &quot;Management&quot;,
13377, &quot;HR development&quot;,
13378, &quot;HR development&quot;,
13379, &quot;HR development&quot;,
13380, &quot;HR development&quot;,
13543, &quot;Automation&quot;,
14088, &quot;Administration&quot;,
14089, &quot;Administration&quot;,
14090, &quot;Administration&quot;,
14251, &quot;Internal support/IT&quot;,
14596, &quot;Fusion&quot;,
14769, &quot;Automation&quot;,
14873, &quot;Internal support/IT&quot;,
14876, &quot;Training&quot;,
14877, &quot;Training&quot;,
14878, &quot;Training&quot;,
14879, &quot;Training&quot;,
15611, &quot;Fusion&quot;,
15628, &quot;HR development&quot;,
15629, &quot;HR development&quot;,
15670, &quot;Fusion&quot;,
15769, &quot;Fusion&quot;,
15883, &quot;Administration&quot;,
16650, &quot;Marketing&quot;,
16651, &quot;Marketing&quot;,

&quot;Missing projects&quot;),

&quot;Missing projects&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Classification</label>
    <type>Text</type>
</CustomField>