force-app/main/default/objects/Project__c/fields/Project_Number1__c.field-meta.xml
<CustomField>
    <fullName>Project_Number1__c</fullName>
    <formula>TEXT(Project_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>