force-app/main/default/objects/Project__c/fields/Total_Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Estimate__c</fullName>
    <label>Total Hours Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>