force-app/main/default/objects/Project__c/fields/Total_Hours_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Incurred__c</fullName>
    <inlineHelpText>Calculated from time records related to tasks</inlineHelpText>
    <label>Total Hours Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>