force-app/main/default/objects/Project__c/fields/Total_Open_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Task_Count__c</fullName>
    <label>Total Open Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>