force-app/main/default/objects/Project__c/recordTypes/Implementations.recordType-meta.xml
<RecordType>
    <fullName>Implementations</fullName>
    <active>true</active>
    <description>Use for Implementation Projects</description>
    <label>Implementations</label>
</RecordType>