force-app/main/default/objects/Project__c/recordTypes/Integrations.recordType-meta.xml
<RecordType>
    <fullName>Integrations</fullName>
    <active>true</active>
    <description>Use for Integration Projects</description>
    <label>Integrations</label>
</RecordType>