force-app/main/default/objects/Project__c/recordTypes/Internal_Project.recordType-meta.xml
<RecordType>
    <fullName>Internal_Project</fullName>
    <active>true</active>
    <description>Use for Internal Projects</description>
    <label>Internal Project</label>
</RecordType>