force-app/main/default/objects/Project__c/recordTypes/Operational.recordType-meta.xml
<RecordType>
    <fullName>Operational</fullName>
    <active>true</active>
    <description>Ongoing Operations Project - When creating this Project type you will also automatically create a related Project Task. Names for both Project and Project Task will automatically be updated upon saving.</description>
    <label>Operational</label>
</RecordType>