force-app/main/default/objects/Project__c/validationRules/Operational_Project_Already_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Operational_Project_Already_Exists</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp;
RecordType.Name = &quot;Operational&quot; 
&amp;&amp;
!ISBLANK(Account__r.Project_Number_Operational__c)
&amp;&amp;
Is_Cloned__c = False</errorConditionFormula>
    <errorMessage>Operational Project is already created for this Account, check Project related list.</errorMessage>
</ValidationRule>