force-app/main/default/objects/Project__c/validationRules/Validate_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Name_Change</fullName>
    <active>true</active>
    <description>System admin - 00e1t000001UNCv
View Inhouse - 00e1t000000Rnwy</description>
    <errorConditionFormula>ISCHANGED(Name)
&amp;&amp; 
BEGINS(PRIORVALUE(Name),&quot;O - &quot;) 
&amp;&amp; 
RecordType.Name = &quot;Operational&quot;
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1t000001UNCv&quot;
&amp;&amp;
$User.ProfileId &lt;&gt; &quot;00e1t000000Rnwy&quot;</errorConditionFormula>
    <errorMessage>Project Name is created automatically and cannot be changed.</errorMessage>
</ValidationRule>